[gd_scene load_steps=5 format=3 uid="uid://bckoota2brwm7"]

[ext_resource type="Texture2D" uid="uid://7x44yctjijxc" path="res://PixelSpaceRage/256px/Platform_03_png_processed.png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://b1c67u76u677o" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://b6ey43jfat6tm" path="res://Zenon.tscn" id="1_ig7tw"]
[ext_resource type="AudioStream" uid="uid://cx7fdq1qkkrbv" path="res://PixelSpaceRage/peter-hajba-razorback-unreal-tournament.mp3" id="4_1bvp3"]

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Background" type="Node2D" parent="."]

[node name="Platform03PngProcessed" type="Sprite2D" parent="Background"]
position = Vector2(-325, -325)
scale = Vector2(10.16, 10.16)
texture = ExtResource("1_0xm2m")

[node name="Platform03PngProcessed2" type="Sprite2D" parent="Background"]
position = Vector2(325, -325)
scale = Vector2(10.16, 10.16)
texture = ExtResource("1_0xm2m")

[node name="Platform03PngProcessed3" type="Sprite2D" parent="Background"]
position = Vector2(325, 325)
scale = Vector2(10.16, 10.16)
texture = ExtResource("1_0xm2m")

[node name="Platform03PngProcessed4" type="Sprite2D" parent="Background"]
position = Vector2(-325, 325)
scale = Vector2(10.16, 10.16)
texture = ExtResource("1_0xm2m")

[node name="Laser" type="Node2D" parent="."]

[node name="Enemy" type="Node2D" parent="."]

[node name="Zenon" parent="." instance=ExtResource("1_ig7tw")]

[node name="EnemyWaitTimer" type="Timer" parent="."]
wait_time = 13.0
one_shot = true
autostart = true

[node name="Warning" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1bvp3")
autoplay = true

[connection signal="timeout" from="EnemyWaitTimer" to="." method="_on_enemy_wait_timer_timeout"]
[connection signal="timeout" from="Warning" to="." method="_on_warning_timeout"]
